Feat: 구성원 생명주기 API 구현
